<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainFragment">


    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:paddingVertical="0dp"
                android:textSize="25sp"
                android:text="@string/random_acts_info_header"
                android:onClick="toggleVisibility"/>
            <ImageButton
                android:id="@+id/infoToggleButton"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_arrow_right"
                android:layout_marginVertical="4dp"
                android:textAlignment="center"
                android:background="?android:attr/selectableItemBackground"
                android:contentDescription="Expand/Collapse"
                android:onClick="toggleVisibility"/>
        </LinearLayout>
        <TextView
            android:id="@+id/infoTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/random_acts_info"
            android:visibility="gone"
            android:paddingBottom="16dp"
            android:paddingHorizontal="15dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:paddingVertical="0dp"
                android:textSize="25sp"
                android:text="@string/random_acts_explain_header"
                android:onClick="toggleExplainVisibility"/>
            <ImageButton
                android:id="@+id/explainToggleButton"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_arrow_right"
                android:layout_marginVertical="4dp"
                android:textAlignment="center"
                android:background="?android:attr/selectableItemBackground"
                android:contentDescription="Expand/Collapse"
                android:onClick="toggleExplainVisibility"/>
        </LinearLayout>
        <TextView
            android:id="@+id/explainTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/random_acts_explain"
            android:visibility="gone"
            android:paddingHorizontal="15dp"
            android:paddingBottom="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:paddingVertical="0dp"
                android:textSize="25sp"
                android:text="@string/quote_of_day_header"
                android:onClick="toggleQuoteVisibility"/>
            <ImageButton
                android:id="@+id/quoteToggleButton"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_arrow_right"
                android:layout_marginVertical="4dp"
                android:textAlignment="center"
                android:background="?android:attr/selectableItemBackground"
                android:contentDescription="Expand/Collapse"
                android:onClick="toggleQuoteVisibility"/>
        </LinearLayout>
        <TextView
            android:id="@+id/quoteTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:visibility="gone"
            android:paddingHorizontal="15dp"
            android:paddingBottom="16dp"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>